assets/css/main.css
@import "../fonts/roboto/css/roboto.font.css";

* {
	box-sizing: border-box;
	font-family: Roboto;
}

html {
	font-size: 16px;
}

body, div, p, h1, h2, h3, h4, ul, li {
	padding: 0;
	margin: 0;
}

body {
	background: rgb(10, 10, 10, 0.3) url("../img/bg2.png");
	background-blend-mode: darken;
	background-size: cover;
	background-position: center;
	background-attachment: fixed;
}

.landing-page {
	width: 100%;
	height: 100vh;
	height: -webkit-fill-available;
	color: white;
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
	position: relative;
}

.landing-page .scroll-icon {
	position: absolute;
	bottom: 0;
	left: 0;
	right: 0;
	width: 100%;
	height: 90px;
	display: flex;
	justify-content: center;
	align-items: center;
	z-index: 1;
}

.landing-page .scroll-icon i {
	animation: shake-down 3s ease-in-out infinite;
}

.landing-page .pic {
	width: 200px;
	height: 200px;
	background-image: url("../img/nicoadriany.jpg");
	background-size: cover;
	background-repeat: no-repeat;
	border-radius: 50%;
	border: 6px solid white;
}

.landing-page h1 {
	font-size: 3rem;
}

.landing-page .passion {
	font-size: 2rem;
	font-weight: 200;
	min-height: 50px;
	display: flex;
	justify-content: center;
	align-items: center;
}

.landing-page .social {
	list-style-type: none;
	display: flex;
	gap: 10px;
}

.landing-page a {
	width: 45px;
	height: 45px;
	border: 1px solid rgba(255, 255, 255, 0.4);
	border-radius: 50%;
	display: flex;
	justify-content: center;
	align-items: center;
	color: white;
	font-size: 1.5rem;
	text-decoration: none;
	transition: background-color 0.1s ease-in-out;
}

.landing-page a:hover {
	background-color: rgba(255, 255, 255, 0.2);
}

/* subpages */

.subpage {
	width: 100%;
	height: 100vh;
	height: -webkit-fill-available;
	display: flex;
	flex-direction: row;
	flex-wrap: nowrap;
}

.subpage .subpage-area {
	flex-basis: 0;
	flex-grow: 1;
	flex-shrink: 0;
	padding: 30px;
}

.subpage .title-area {
	background-color: rgba(40, 40, 40, 0.9);
	display: flex;
	justify-content: center;
	align-items: center;
	color: white;
	font-weight: 200;
}

.subpage .title-area span {
	border: 1px solid white;
	padding: 20px;
	border-radius: 5px;
	font-size: 3em;
}

.subpage .content-area {
	background-color: rgb(255, 255, 255);
	color: black;
}

.flex-center {
	display: flex;
	justify-content: center;
	align-items: center;
}

/* subpage: legal notices */
.legal p {
	text-align: justify;
}

.legal p + h2 {
	margin-top: 25px;
}

.legal p + h3 {
	margin-top: 25px;
}

.legal h2 {
	margin-bottom: 10px;
}

.legal h3 {
	margin: 0 0 10px 0;
}

@media screen and (max-width: 768px) {
	html {
		font-size: 14px;
	}

	.landing-page .pic {
		width: 175px;
		height: 175px;
	}
}

@media screen and (max-width: 576px) {
	html {
		font-size: 12px;
	}

	.landing-page .pic {
		width: 150;
		height: 150px;
	}
}

/* animations */

@keyframes shake-down {
	0% {
		padding-top: 0;
	}
	5% {
		padding-top: 5px;
	}
	10% {
		padding-top: 0;
	}
	15% {
		padding-top: 5px;
	}
	20% {
		padding-top: 0;
	}
}

